# hust_CTriangleCount

./: .gitignore  CMakeLists.txt  README.md
data/mytest/: mytest.txt
data/test/: mytest.txt
include/: countfun.h  fun.h  graph.h  graphfun.h
src/: countfun.cpp  fun.cpp  graphfun.cpp  main.cpp
